<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.MPNMJEC.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.MPNMJEC.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="64dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/header_image"
            app:srcCompat="@drawable/header" />

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/subtitle"
            android:textColor="#3CB372"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="120dp"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/web"
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="15dp"
                        android:layout_weight="1"
                        android:drawableEnd="@drawable/location"
                        android:isScrollContainer="true"
                        android:onClick="website"
                        android:text="@string/website"
                        android:textSize="12sp"
                        app:cornerRadius="0dp"
                        app:icon="@drawable/website"
                        app:iconPadding="0dp"
                        app:iconSize="24dp"
                        app:iconTintMode="src_atop"
                        tools:ignore="ButtonStyle" />

                    <Button
                        android:id="@+id/sdt"
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="15dp"
                        android:layout_weight="1"
                        android:onClick="feedback"
                        android:text="@string/student"
                        android:textSize="12sp"
                        app:cornerRadius="0dp"
                        app:icon="@drawable/person"
                        app:iconPadding="0dp"
                        app:iconSize="24dp"
                        tools:ignore="ButtonStyle" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center">

                    <Button
                        android:id="@+id/loc"
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="15dp"
                        android:layout_weight="1"
                        android:onClick="location"
                        android:text="@string/location"
                        android:textSize="12sp"
                        app:cornerRadius="0dp"
                        app:icon="@drawable/location"
                        app:iconPadding="0dp"
                        app:iconSize="22dp"
                        tools:ignore="ButtonStyle" />

                    <Button
                        android:id="@+id/abt"
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="15dp"
                        android:layout_weight="1"
                        android:onClick="contact"
                        android:text="@string/contact"
                        android:textColor="#FFFFFF"
                        android:textSize="12sp"
                        app:cornerRadius="0dp"
                        app:icon="@drawable/email"
                        app:iconPadding="0dp"
                        app:iconSize="22dp"
                        tools:ignore="ButtonStyle" />
                </TableRow>

            </TableLayout>

        </ScrollView>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>